// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tokenize tokenize - no replacer 1`] = `
Array [
  OtherToken {
    "pos": Object {
      "end": 9,
      "start": 0,
    },
    "raw": "
content
",
    "type": "other",
  },
]
`;

exports[`tokenize tokenize - one replacer 1`] = `
Array [
  OtherToken {
    "pos": Object {
      "end": 11,
      "start": 0,
    },
    "raw": "
content 1
",
    "type": "other",
  },
  ReplaceStartToken {
    "name": "foo",
    "pos": Object {
      "end": 30,
      "start": 11,
    },
    "raw": "<!-- start: foo -->",
    "type": "replace-start",
  },
  OtherToken {
    "pos": Object {
      "end": 41,
      "start": 30,
    },
    "raw": "
content 2
",
    "type": "other",
  },
  ReplaceEndToken {
    "name": "foo",
    "pos": Object {
      "end": 58,
      "start": 41,
    },
    "raw": "<!-- end: foo -->",
    "type": "replace-end",
  },
  OtherToken {
    "pos": Object {
      "end": 59,
      "start": 58,
    },
    "raw": "
",
    "type": "other",
  },
]
`;

exports[`tokenize tokenize - two replace - same line 1`] = `
Array [
  OtherToken {
    "pos": Object {
      "end": 8,
      "start": 0,
    },
    "raw": "
before
",
    "type": "other",
  },
  ReplaceStartToken {
    "name": "foo",
    "pos": Object {
      "end": 27,
      "start": 8,
    },
    "raw": "<!-- start: foo -->",
    "type": "replace-start",
  },
  OtherToken {
    "pos": Object {
      "end": 32,
      "start": 27,
    },
    "raw": "
foo
",
    "type": "other",
  },
  ReplaceEndToken {
    "name": "foo",
    "pos": Object {
      "end": 49,
      "start": 32,
    },
    "raw": "<!-- end: foo -->",
    "type": "replace-end",
  },
  OtherToken {
    "pos": Object {
      "end": 56,
      "start": 49,
    },
    "raw": "between",
    "type": "other",
  },
  ReplaceStartToken {
    "name": "bar",
    "pos": Object {
      "end": 75,
      "start": 56,
    },
    "raw": "<!-- start: bar -->",
    "type": "replace-start",
  },
  OtherToken {
    "pos": Object {
      "end": 78,
      "start": 75,
    },
    "raw": "bar",
    "type": "other",
  },
  ReplaceEndToken {
    "name": "bar",
    "pos": Object {
      "end": 95,
      "start": 78,
    },
    "raw": "<!-- end: bar -->",
    "type": "replace-end",
  },
  OtherToken {
    "pos": Object {
      "end": 100,
      "start": 95,
    },
    "raw": "after",
    "type": "other",
  },
]
`;

exports[`tokenize tokenize - two replacer 1`] = `
Array [
  OtherToken {
    "pos": Object {
      "end": 11,
      "start": 0,
    },
    "raw": "
content 1
",
    "type": "other",
  },
  ReplaceStartToken {
    "name": "foo",
    "pos": Object {
      "end": 30,
      "start": 11,
    },
    "raw": "<!-- start: foo -->",
    "type": "replace-start",
  },
  OtherToken {
    "pos": Object {
      "end": 41,
      "start": 30,
    },
    "raw": "
content 2
",
    "type": "other",
  },
  ReplaceEndToken {
    "name": "foo",
    "pos": Object {
      "end": 58,
      "start": 41,
    },
    "raw": "<!-- end: foo -->",
    "type": "replace-end",
  },
  OtherToken {
    "pos": Object {
      "end": 69,
      "start": 58,
    },
    "raw": "
content 3
",
    "type": "other",
  },
  ReplaceStartToken {
    "name": "bar",
    "pos": Object {
      "end": 88,
      "start": 69,
    },
    "raw": "<!-- start: bar -->",
    "type": "replace-start",
  },
  OtherToken {
    "pos": Object {
      "end": 99,
      "start": 88,
    },
    "raw": "
content 4
",
    "type": "other",
  },
  ReplaceEndToken {
    "name": "bar",
    "pos": Object {
      "end": 116,
      "start": 99,
    },
    "raw": "<!-- end: bar -->",
    "type": "replace-end",
  },
  OtherToken {
    "pos": Object {
      "end": 127,
      "start": 116,
    },
    "raw": "
content 5
",
    "type": "other",
  },
]
`;
